--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,5 @@
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
-
-### NextJS ###
 # dependencies
 /node_modules
 /.pnp
@@ -24,10 +23,10 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-.pnpm-debug.log*
 
 # local env files
 .env*.local
+.env
 
 # vercel
 .vercel
@@ -35,5 +34,3 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
-
-# End of https://www.toptal.com/developers/gitignore/api/nextjs
