--- a/tsconfig.json
+++ b/tsconfig.json
@@ -37,7 +37,7 @@
     ".next/types/**/*.ts",
     "app/lib/placeholder-data.ts",
     "scripts/seed.js"
-  ],
+, "app/context/context.ts"  ],
   "exclude": [
     "node_modules"
   ]
