--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,7 @@
 {
   "compilerOptions": {
     "target": "ES2017",
-    "lib": [
-      "dom",
-      "dom.iterable",
-      "esnext"
-    ],
+    "lib": ["dom", "dom.iterable", "esnext"],
     "allowJs": true,
     "skipLibCheck": true,
     "strict": false,
@@ -24,9 +20,7 @@
     ],
     "baseUrl": ".",
     "paths": {
-      "@/*": [
-        "./*"
-      ]
+      "@/*": ["./*"]
     },
     "strictNullChecks": true
   },
@@ -36,9 +30,12 @@
     "**/*.tsx",
     ".next/types/**/*.ts",
     "app/lib/placeholder-data.ts",
-    "scripts/seed.js"
-, "app/context/context.ts"  ],
-  "exclude": [
-    "node_modules"
-  ]
+    "scripts/seed.js",
+    "app/context/context.ts",
+    "next-auth.d.ts"
+  ],
+  "exclude": ["node_modules"],
+  "typeRoots": ["./types", "./node_modules/@types"],
+  "strict": true,
+  "moduleResolution": "node"
 }
