--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
+    "@pdfme/common": "^5.2.16",
+    "@pdfme/generator": "^5.2.16",
     "@tailwindcss/forms": "^0.5.9",
     "@vercel/postgres": "^0.10.0",
     "autoprefixer": "10.4.20",
