--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "autoprefixer": "10.4.20",
     "bcrypt": "^5.1.1",
     "clsx": "^2.1.1",
-    "next": "15.0.4-canary.50",
+    "next": "15.1.5",
     "next-auth": "5.0.0-beta.25",
     "pnpm": "^9.15.0",
     "postcss": "8.4.49",
