--- a/package.json
+++ b/package.json
@@ -10,18 +10,25 @@
     "@heroicons/react": "^2.2.0",
     "@pdfme/common": "^5.2.16",
     "@pdfme/generator": "^5.2.16",
+    "@radix-ui/react-dropdown-menu": "^2.1.5",
+    "@radix-ui/react-slot": "^1.1.1",
     "@tailwindcss/forms": "^0.5.9",
     "@vercel/postgres": "^0.10.0",
     "autoprefixer": "10.4.20",
     "bcrypt": "^5.1.1",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "lucide-react": "^0.474.0",
     "next": "15.1.5",
     "next-auth": "5.0.0-beta.25",
+    "next-themes": "^0.4.4",
     "pnpm": "^9.15.0",
     "postcss": "8.4.49",
     "react": "19.0.0",
     "react-dom": "19.0.0",
+    "tailwind-merge": "^2.6.0",
     "tailwindcss": "3.4.16",
+    "tailwindcss-animate": "^1.0.7",
     "typescript": "5.7.2",
     "use-debounce": "^10.0.4",
     "zod": "^3.23.8"
