--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "@heroicons/react": "^2.2.0",
     "@pdfme/common": "^5.2.16",
     "@pdfme/generator": "^5.2.16",
-    "@radix-ui/react-dropdown-menu": "^2.1.5",
     "@radix-ui/react-slot": "^1.1.1",
+    "@radix-ui/react-toggle": "^1.1.1",
     "@tailwindcss/forms": "^0.5.9",
     "@vercel/postgres": "^0.10.0",
     "autoprefixer": "10.4.20",
