--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "eslint-plugin-react": "^7.37.4",
     "lucide-react": "^0.474.0",
     "next": "15.1.5",
     "next-auth": "5.0.0-beta.25",
