--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@pdfme/common": "^5.2.16",
     "@pdfme/generator": "^5.2.16",
     "@radix-ui/react-slot": "^1.1.1",
+    "@radix-ui/react-toast": "^1.2.5",
     "@radix-ui/react-toggle": "^1.1.1",
     "@tailwindcss/forms": "^0.5.9",
     "@vercel/postgres": "^0.10.0",
