--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
   "dependencies": {
     "@ducanh2912/next-pwa": "^10.2.9",
     "@heroicons/react": "^2.2.0",
-    "@pdfme/common": "^5.2.16",
-    "@pdfme/generator": "^5.2.16",
+    "@radix-ui/react-context-menu": "^2.2.5",
+    "@radix-ui/react-dialog": "^1.1.5",
+    "@radix-ui/react-label": "^2.1.1",
     "@radix-ui/react-slot": "^1.1.1",
     "@radix-ui/react-toast": "^1.2.5",
     "@radix-ui/react-toggle": "^1.1.1",
@@ -25,6 +26,7 @@
     "next": "15.1.5",
     "next-auth": "5.0.0-beta.25",
     "next-themes": "^0.4.4",
+    "pdf-lib": "^1.17.1",
     "pnpm": "^9.15.0",
     "postcss": "8.4.49",
     "react": "19.0.0",
