--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "next": "15.1.5",
     "next-auth": "5.0.0-beta.25",
     "next-themes": "^0.4.4",
+    "papaparse": "^5.5.2",
     "pdf-lib": "^1.17.1",
     "pnpm": "^9.15.0",
     "postcss": "8.4.49",
